--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ environment:
   flutter: ">=1.13.18 <2.0.0"
 
 dependencies:
-  flutter_modular: ^3.0.0+1
+  flutter_modular: ^6.3.2
   flutter:
     sdk: flutter
 
